--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -48,3 +48,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
+
+
+//---------------Material Pin View -------------
+dependencies {
+    implementation 'com.chaos.view:pinview:1.4.3'
+}
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.constraintlayout:constraintlayout:+'
+}
