updating validate page

--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -50,12 +50,8 @@ dependencies {
 }
 
 
-//---------------Material Pin View -------------
+//---------------Material Pin View and circular progress bar -------------
 dependencies {
     implementation 'com.chaos.view:pinview:1.4.3'
-}
-
-dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
+    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
 }
