--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -34,11 +34,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation "com.google.android.material:material:1.3.0-alpha02"
 }
 
 
@@ -50,8 +51,28 @@ dependencies {
 }
 
 
-//---------------Material Pin View and circular progress bar -------------
+//---------------Material Pin View and circular progress bar -------------//
 dependencies {
     implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
+}
+
+//----------------glide --------------------//
+dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+}
+
+//--------------room --------------------//
+dependencies {
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+}
+
+
+//-------------------YoYo Animation------------//
+dependencies {
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 }
