adding some new feature to profile page

--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -93,3 +93,8 @@ dependencies {
 dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
+
+//-----------------------Expandable layout---------------//
+dependencies {
+    implementation 'com.github.florent37:expansionpanel:1.2.2'
+}
