--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -6,16 +6,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:fullBackupContent="@xml/backup_descriptor"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
-        <activity android:name=".calculator.CalculatorActivity"/>
+        <activity android:name=".main.profile.setting.SettingActivity"></activity>
+        <activity android:name=".calculator.CalculatorActivity" />
         <activity android:name=".login.ValidateActivity" />
         <activity android:name=".login.LoginActivity">
             <intent-filter>
@@ -23,10 +24,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".main.MainActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".main.MainActivity"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
