--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -100,6 +100,5 @@ dependencies {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:+'
-    implementation 'androidx.constraintlayout:constraintlayout:+'
+    implementation 'androidx.legacy:legacy-support-v4:+'
 }
