adding splash screen

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -19,16 +19,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
-        <activity android:name=".main.profile.setting.SettingActivity"/>
-        <activity android:name=".calculator.CalculatorActivity" />
-        <activity android:name=".login.ValidateActivity" />
-        <activity android:name=".login.LoginActivity">
+        <activity android:name=".SplashScreen">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".main.profile.setting.SettingActivity" />
+        <activity android:name=".calculator.CalculatorActivity" />
+        <activity android:name=".login.ValidateActivity" />
+        <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".main.MainActivity"
             android:windowSoftInputMode="adjustPan" />
@@ -38,13 +41,10 @@
             android:authorities="com.kharazmic.app"
             android:exported="false"
             android:grantUriPermissions="true">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_path" />
         </provider>
-
-
     </application>
 
 </manifest>
