--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -117,3 +117,8 @@ dependencies {
     implementation 'id.zelory:compressor:3.0.0'
     implementation "com.github.ChiliLabs:ChiliPhotoPicker:0.3.1"
 }
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.constraintlayout:constraintlayout:+'
+}
