--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -134,3 +134,7 @@ dependencies {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:+'
 }
+
+dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:+'
+}
