--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation "com.google.android.material:material:1.3.0-alpha02"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'com.google.android.material:material:1.2.0'
 }
 
 
