change some thing in stock main fragment

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
-        <activity android:name=".main.gold.GoldCurrencyActivity"/>
+        <activity android:name=".main.gold.currency_fragment.AllCurrencyActivity"></activity>
+        <activity android:name=".main.gold.GoldCurrencyActivity" />
         <activity android:name=".main.stock.StockActivity" />
         <activity android:name=".main.profile.signals.SignalDetailActivity" />
         <activity android:name=".SplashScreen">
