--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
-        android:name=".App"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="n">
-        <activity android:name=".main.home.digital_currency.DigitalCurrencyDetailActivity"></activity>
+        tools:targetApi="q">
+        <activity android:name=".main.home.digital_currency.DigitalCurrencyDetailActivity" />
         <activity android:name=".main.home.digital_currency.DigitalCurrencyActivity" />
         <activity android:name=".main.home.desk.constant.detail.ConstantIncomeDetailActivity" />
         <activity android:name=".main.home.desk.CashDeskActivity" />
@@ -44,16 +44,6 @@
         <activity
             android:name=".main.MainActivity"
             android:windowSoftInputMode="adjustPan" />
-
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.kharazmic.app.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_path" />
-        </provider>
     </application>
 
 </manifest>
